Fix grid item overflow (Safari)

--- a/src/components/file-grid/file-grid-item.scss
+++ b/src/components/file-grid/file-grid-item.scss
@@ -19,7 +19,6 @@ $icon-size: 48px;
 .file-grid-item_inner {
   display: grid;
   width: $item-size;
-  height: $item-size;
   grid-template-rows: $icon-size auto;
   grid-gap: $space-xs;
   
